--- a/forms/mainform.lfm
+++ b/forms/mainform.lfm
@@ -6,6 +6,7 @@ object MainWindow: TMainWindow
   Caption = 'SheduledRepair'
   ClientHeight = 655
   ClientWidth = 974
+  OnCreate = FormCreate
   LCLVersion = '2.0.6.0'
   object MenuGrid: TStringGrid
     Left = 0
