--- a/forms/mainform.lfm
+++ b/forms/mainform.lfm
@@ -1,8 +1,20 @@
 object MainWindow: TMainWindow
-  Left = 2376
+  Left = 2517
   Height = 655
-  Top = 139
+  Top = 156
   Width = 974
   Caption = 'SheduledRepair'
+  ClientHeight = 655
+  ClientWidth = 974
   LCLVersion = '2.0.6.0'
+  object ListBox1: TListBox
+    Left = 216
+    Height = 336
+    Top = 159
+    Width = 336
+    ItemHeight = 0
+    ScrollWidth = 334
+    TabOrder = 0
+    TopIndex = -1
+  end
 end
