--- a/forms/editors/profileform.lfm
+++ b/forms/editors/profileform.lfm
@@ -1,8 +1,70 @@
 object ProfileWindow: TProfileWindow
-  Left = 2939
-  Height = 650
-  Top = 135
-  Width = 323
+  Left = 3413
+  Height = 634
+  Top = 157
+  Width = 400
   Caption = 'Profile editor'
+  ClientHeight = 634
+  ClientWidth = 400
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '2.0.6.0'
+  object PageControl: TPageControl
+    Left = 0
+    Height = 634
+    Top = 0
+    Width = 400
+    ActivePage = DefaultProfileTabSheet
+    Align = alClient
+    TabIndex = 0
+    TabOrder = 0
+    object DefaultProfileTabSheet: TTabSheet
+      Caption = 'Default profile'
+      ClientHeight = 604
+      ClientWidth = 390
+      object DefaultProfileTree: TVirtualDrawTree
+        Left = 0
+        Height = 604
+        Top = 0
+        Width = 390
+        Align = alClient
+        Header.AutoSizeIndex = 0
+        Header.Columns = <>
+        Header.MainColumn = -1
+        TabOrder = 0
+      end
+    end
+    object HoverProfileTabSheet: TTabSheet
+      Caption = 'Hover profile'
+      ClientHeight = 604
+      ClientWidth = 390
+      object HoverProfileTree: TVirtualDrawTree
+        Left = 0
+        Height = 620
+        Top = 0
+        Width = 390
+        Align = alClient
+        Header.AutoSizeIndex = 0
+        Header.Columns = <>
+        Header.MainColumn = -1
+        TabOrder = 0
+      end
+    end
+    object SelectedProfileTabSheet: TTabSheet
+      Caption = 'Selected profile'
+      ClientHeight = 604
+      ClientWidth = 390
+      object SelectedProfileTree: TVirtualDrawTree
+        Left = 0
+        Height = 620
+        Top = 0
+        Width = 390
+        Align = alClient
+        Header.AutoSizeIndex = 0
+        Header.Columns = <>
+        Header.MainColumn = -1
+        TabOrder = 0
+      end
+    end
+  end
 end
