--- a/forms/editors/profileform.lfm
+++ b/forms/editors/profileform.lfm
@@ -1,68 +1,76 @@
 object ProfileWindow: TProfileWindow
   Left = 3413
-  Height = 634
+  Height = 667
   Top = 157
-  Width = 400
+  Width = 421
   Caption = 'Profile editor'
-  ClientHeight = 634
-  ClientWidth = 400
+  ClientHeight = 667
+  ClientWidth = 421
+  DesignTimePPI = 101
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.10.0'
   object PageControl: TPageControl
     Left = 0
-    Height = 634
+    Height = 667
     Top = 0
-    Width = 400
+    Width = 421
     ActivePage = DefaultProfileTabSheet
     Align = alClient
+    ParentFont = False
     TabIndex = 0
     TabOrder = 0
     object DefaultProfileTabSheet: TTabSheet
       Caption = 'Default profile'
-      ClientHeight = 604
-      ClientWidth = 390
+      ClientHeight = 632
+      ClientWidth = 415
+      ParentFont = False
       object DefaultProfileTree: TVirtualDrawTree
         Left = 0
-        Height = 604
+        Height = 632
         Top = 0
-        Width = 390
+        Width = 415
         Align = alClient
         Header.AutoSizeIndex = 0
         Header.Columns = <>
         Header.MainColumn = -1
+        ParentFont = False
         TabOrder = 0
       end
     end
     object HoverProfileTabSheet: TTabSheet
       Caption = 'Hover profile'
-      ClientHeight = 604
-      ClientWidth = 390
+      ClientHeight = 632
+      ClientWidth = 415
+      ParentFont = False
       object HoverProfileTree: TVirtualDrawTree
         Left = 0
-        Height = 620
+        Height = 632
         Top = 0
-        Width = 390
+        Width = 415
         Align = alClient
         Header.AutoSizeIndex = 0
         Header.Columns = <>
         Header.MainColumn = -1
+        ParentFont = False
         TabOrder = 0
       end
     end
     object SelectedProfileTabSheet: TTabSheet
       Caption = 'Selected profile'
-      ClientHeight = 604
-      ClientWidth = 390
+      ClientHeight = 632
+      ClientWidth = 415
+      ParentFont = False
       object SelectedProfileTree: TVirtualDrawTree
         Left = 0
-        Height = 620
+        Height = 632
         Top = 0
-        Width = 390
+        Width = 415
         Align = alClient
         Header.AutoSizeIndex = 0
         Header.Columns = <>
         Header.MainColumn = -1
+        ParentFont = False
         TabOrder = 0
       end
     end
